--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -107,6 +107,7 @@ Actual Name,Romanized Name
 スタンバイオッケー,Standby OK
 ゆらゆらアクアリウム,Yurayura Aquarium
 ないしょのスイーツ,"Naisho no Sweets"
+お散歩サンライト,"Osanpo Sunlight"
 事務所。静寂。大輪の華,"Jimusho. Shijima. Dairin no Hana"
 好きなものはなんですか？,"Sukinamono wa Nandesuka?"
 マイ・ピュア・ロマンス,My Pure Romance
@@ -115,6 +116,7 @@ Actual Name,Romanized Name
 ジャンプ！スタッグ！！！,"Jump! Stag!!!"
 オ♡フ♡レ♡コ,"Off the Record"
 ちょっとあげる～,"Chotto Ageru~"
+メイ・ビー,"Mei-be"
 アイドルのたまご,Idol no Tamago
 ２８３プロのヒナ,283Pro no Hina
 天然色ピクニック,Ten'nenshoku Picnic
@@ -226,11 +228,13 @@ prince×princess,"prince x princess"
 身支度はお任せ☆,Mijitaku wa Omakase
 かしまし、みっつの願いごと,"Kashimashi, Mittsu no Negaigoto"
 トゥインクル・トゥインクル,"Twinkle Twinkle"
+見果てぬ先のアヴァロン,"Mihatenu Saki no Avalon"
 先生のお時間,Sensei no Ojikan
 永遠のCarol,Eien no Carol
 トキ・メキ・タコさん,Tokimeki Taco-san
 ウォーム・スノウ,"Warm Snow"
 あめ、ゆき、はれ,"Ame, Yuki, Hare"
+ドゥワッチャラブ！,"Do Watcher Love!"
 プレゼン・バトン！,"Present Baton!"
 スパイシーベリィデコレイト,Spicy Berry Decorate
 ノー墨・勝者フェイス,No Sumi Shousha Phase
