--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -1,14 +1,17 @@
 Actual Name,Romanized Name
 白いツバサ,Shiroi Tsubasa
+アイドルロード,Idol Road
 ナチュラルモード,Natural Mode
 しじまに華ひととき,Shijimani Hana Hitotoki
 ぐうぜんBOOKS,Guuzen BOOKS
+花結びゆくゆく,Hanamusubi Yukuyuku
 手作りの心遣い,Tedzukuri no Kokorodzukai
 マフラー直して、心は解けて,"Muffler Naoshite, Kokoro wa Tokete"
 落下予測地点,"Rakka Yosoku Chiten"
 キネマ・リリックで夢見て,Cinema Lyric de Yumemite
 小さな夜のトロイメライ,Chiisana Yoru no Träumerei
 チエルアルコは流星の,Chieralco wa Ryuusei no
+ハロー・ワールド,Hello World
 ばってん長崎恋岬,Batten Nagasaki Koimisaki
 ビ～♡バップ海岸,Bebop Kaigan
 は～と♡に火をつけて,Heart ni Hi wo tsukete
@@ -113,7 +116,9 @@ Actual Name,Romanized Name
 マイ・ピュア・ロマンス,My Pure Romance
 シークレット・ヒロイン,Secret Heroine
 サマーハニー・シーズン,"Summer Honey Season"
+はるかぜまち、1番地,"Harukazemachi, Ichibanchi"
 ジャンプ！スタッグ！！！,"Jump! Stag!!!"
+空と青とアイツ,"Sora to Ao to Aitsu"
 オ♡フ♡レ♡コ,"Off the Record"
 ちょっとあげる～,"Chotto Ageru~"
 メイ・ビー,"Mei-be"
@@ -125,6 +130,7 @@ Actual Name,Romanized Name
 遊び疲れて……,Asobi Tsukarete...
 魔法の階段を上って……,Mahou no Kaidan wo Nobotte
 RPGのススメ,RPG no Susume
+クローズ・トゥ・ユー,"Close to You"
 友情の花吹雪,Yuujou no Hanafubuki
 友達という灯り,Tomodachi to iu Akari
 アイムカミングスーン,"I'm Coming Soon"
@@ -143,6 +149,7 @@ RPGのススメ,RPG no Susume
 SIDE：Y,"SIDE:Y"
 綿毛ノ想,Watage no Sou
 娘・娘・金・魚,Jou Jou Kin Gyo
+君・空・我・空,Kimi Sora Waga Sora
 放課後スノーガールズ！,Houkago Snow Girls!
 無敵の証！五紋章！,Muteki no Akashi! Gomonshou!
 迷走チョコロード,Meisou Chocoroad
@@ -215,6 +222,7 @@ prince×princess,"prince x princess"
 ふれんど日和,Furendo Biyori
 凛世夕町物語,Rinze Yuumachi Monogatari
 常夏CLIMAX,"Tokonatsu CLIMAX"
+夜明けの晩に,"Yoake no Ban ni"
 熱血指導！,Nekketsu Shidou!
 遊びも本気で,Asobi mo Honki de
 #ナッツ・チョコジェリー,#Nuts Choco Jelly
@@ -234,8 +242,10 @@ prince×princess,"prince x princess"
 トキ・メキ・タコさん,Tokimeki Taco-san
 ウォーム・スノウ,"Warm Snow"
 あめ、ゆき、はれ,"Ame, Yuki, Hare"
-ドゥワッチャラブ！,"Do Watcher Love!"
+ドゥワッチャラブ！,"Do Watcha Love!"
 プレゼン・バトン！,"Present Baton!"
 スパイシーベリィデコレイト,Spicy Berry Decorate
 ノー墨・勝者フェイス,No Sumi Shousha Phase
+＠ストーリィズ,"@Stories"
 なるんじゃん？,Narunjyan?
+うち来る～！？,"Uchikuru~!?"
