--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -21,6 +21,7 @@ Actual Name,Romanized Name
 秘めやかファンサービス,Himeyaka Fan Service
 ふれあい、おもいあい,"Fureai, Omoiai"
 雪染めロマンティカ,Yukisome Romantica
+真紅一輪,Shinku Ichirin
 カラフルメタモルフォーゼ,Colorful Metamorph
 雨色、上機嫌,"Amairo, Joukigen"
 お願い、ただの少女がいい,"Onegai, Tada no Shoujo ga Ii"
@@ -43,9 +44,11 @@ Actual Name,Romanized Name
 ふらここのうた,Furakoko no Uta
 ストイックトレーニング,Stoic Training
 カトレアの花言葉,Cattlea no Hanakotoba
+鳥籠をひらいて,Torikago wo Hiraite
 似合うかな？,Niaukana?
 甜花ちゃんといっしょ☆,Tenka-chan to Issho
 ふたつの雨,Futatsu no Ame
+見つけたい、だけど……,"Mitsuketai, Dakedo..."
 秘密のだらだらタイム,Himitsu no Daradara Time
 シンメトリー・プールサイド,Symmetry Poolside
 氷上バンビーナ,Hyoujou Bambina
@@ -61,6 +64,7 @@ Actual Name,Romanized Name
 水×天カイヤナイト,"Suiten Kyanite"
 気になる！？染めちゃう！？,"Kininaru!? Somechau!?"
 てへっ♪,"Tehe"
+ご褒美、いるよね♪,"Gohoubi, Iruyone"
 ほわっとスマイル,Howatto Smile
 ハ♡トフェルトゥギフト,Heartfelt Gift
 はじけてスマイル,Hajikete Smile
@@ -73,6 +77,7 @@ Actual Name,Romanized Name
 夏に恋するピチカート！,Natsu ni Koisuru Pizzikato!
 シュカのまにまに,Ska no Manimani
 日々を紡ぐインヴェルノ,"Hibi wo Tsumugu Inferno"
+アイの誓い,"Ai no Chikai"
 ばりうまかブルース,Bariumaka Blues
 月の浜辺で待っとって,Tsuki no Hamabe de Mattotte
 風吹く丘にはよ来んね,Kaze Fukuoka ni Hayo Kunne
@@ -84,6 +89,7 @@ Actual Name,Romanized Name
 紺碧のボーダーライン,Konpeki no Borderline
 1/60・NaturalHeart,"1-frame Natural Heart"
 幸福のリズム,Koufuku no Rhythm
+海と太陽のプロメッサ,"Umi to Taiyou no Promessa"
 お試し／みつゴコロ,Otameshi Mitsugokoro
 それなら目をつぶりましょう,Sorenara Me wo Tsuburimashou
 霧・音・燦・燦,Kiri Ne San San
@@ -113,6 +119,7 @@ Actual Name,Romanized Name
 お散歩サンライト,"Osanpo Sunlight"
 事務所。静寂。大輪の華,"Jimusho. Shijima. Dairin no Hana"
 好きなものはなんですか？,"Sukinamono wa Nandesuka?"
+四夜一夜物語,"Yon'ya Ichiya Monogatari"
 マイ・ピュア・ロマンス,My Pure Romance
 シークレット・ヒロイン,Secret Heroine
 サマーハニー・シーズン,"Summer Honey Season"
@@ -122,6 +129,7 @@ Actual Name,Romanized Name
 オ♡フ♡レ♡コ,"Off the Record"
 ちょっとあげる～,"Chotto Ageru~"
 メイ・ビー,"Mei-be"
+カラカラカラ,"Karakarakara"
 アイドルのたまご,Idol no Tamago
 ２８３プロのヒナ,283Pro no Hina
 天然色ピクニック,Ten'nenshoku Picnic
@@ -152,6 +160,7 @@ SIDE：Y,"SIDE:Y"
 君・空・我・空,Kimi Sora Waga Sora
 放課後スノーガールズ！,Houkago Snow Girls!
 無敵の証！五紋章！,Muteki no Akashi! Gomonshou!
+ホーカゴ・ア・ゴーゴー！,"Houkago-A-Gogo"
 迷走チョコロード,Meisou Chocoroad
 Best☆Great☆サマー！,"Best Great Summer!"
 ぐるもこ・まふ×２,"Gurumoko Mafumafu"
@@ -172,6 +181,7 @@ Best☆Great☆サマー！,"Best Great Summer!"
 ブルーミングハート,Blooming Heart
 こころに恋,Kokoro ni Koi
 腹が減っては遊びはできぬ,Hara ga Hette wa Asobi wa Dekinu
+"(ノージャンル)グラヴィティ","(No Genre) Gravity"
 和泉流・書道心得,"Izumi-ryuu Shodou Kokoroe"
 トリプルイルミネーション,Triple Illumination
 お揃いスナップ,Osoroi Snap
@@ -182,6 +192,7 @@ Best☆Great☆サマー！,"Best Great Summer!"
 みんなと結んだもの,Minna to Musundamono
 風野署長の一日勤務回想録,Kazano Shochou no Ichinichi Kinmu Kaisouroku
 星掬い藍仰ぐ,"Hoshisukui Ai'aogu"
+宝石色のしおり,"Houseki'iro no Shiori"
 星合アステリズム,"Hoshiai Asterism"
 スタァライトショウタイム,"Starlight Showtime"
 キャプテン★パンプキン,Captain Pumpkin
@@ -191,11 +202,13 @@ Best☆Great☆サマー！,"Best Great Summer!"
 これ、なんの話～？,"Kore, Nanno Hanashi~?"
 SIDE：K,"SIDE:K"
 夏、どがんね～？,"Natsu, Doganne~?"
+晴れ、よかばい～！,"Hare, Yokabai~!"
 ゴシックデコレーション,Gothic Decoration
 闇鍋上等,Yaminabe Joutou
 夜夜中ワンダーラスト,Yoruyonaka Wanderlust
 きまぐれのめぐみ,Kimagure no Megumi
 デタラメハッシュタグ,Detarame Hashtag
+スプリング・フィッシュ,"Spring Fish"
 指先の煌めき,Yubisaki no Kirameki
 街角フラワーガーデン,Machikado Flower Garden
 月映えのソワレ,Tsukibae no Soiree
@@ -204,6 +217,7 @@ prince×princess,"prince x princess"
 "ハロー、私の「いつも通り」","Hello, Watashi no ""Itsumo Doori"""
 賑やか四畳半,"Nigiyaka Yojouhan"
 プレゼントなら両手いっぱい,Present nara Ryoute Ippai
+おはようと日向に手を振る,"Ohayou to Hinata ni Te wo Furu"
 霧・霧・奇・譚,Kiri Kiri Ki Tan
 娘・娘・謹・賀,"Joujou Kinga"
 我・思・君・思,"Gashi Kunshi"
@@ -242,9 +256,10 @@ prince×princess,"prince x princess"
 トキ・メキ・タコさん,Tokimeki Taco-san
 ウォーム・スノウ,"Warm Snow"
 あめ、ゆき、はれ,"Ame, Yuki, Hare"
-ドゥワッチャラブ！,"Do Watcha Love!"
+ドゥワッチャラブ！,"Do What You Love!"
 プレゼン・バトン！,"Present Baton!"
 スパイシーベリィデコレイト,Spicy Berry Decorate
+今日の手は空を切らない,"Kyou no Te wa Sora wo Kiranai"
 ノー墨・勝者フェイス,No Sumi Shousha Phase
 ＠ストーリィズ,"@Stories"
 なるんじゃん？,Narunjyan?
