not so periodic, but hey

--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -8,6 +8,7 @@ Actual Name,Romanized Name
 手作りの心遣い,Tedzukuri no Kokorodzukai
 マフラー直して、心は解けて,"Muffler Naoshite, Kokoro wa Tokete"
 落下予測地点,"Rakka Yosoku Chiten"
+インビジブルタイム,"Invisible Time"
 キネマ・リリックで夢見て,Cinema Lyric de Yumemite
 小さな夜のトロイメライ,Chiisana Yoru no Träumerei
 チエルアルコは流星の,Chieralco wa Ryuusei no
@@ -15,6 +16,7 @@ Actual Name,Romanized Name
 ばってん長崎恋岬,Batten Nagasaki Koimisaki
 ビ～♡バップ海岸,Bebop Kaigan
 は～と♡に火をつけて,Heart ni Hi wo tsukete
+猫道カントリー,Nekomachi Country
 裏腹あまのじゃく,Urahara Amanojaku
 夕つ方まみみチック,Yuutsugata Mamimi Tick
 そのまみみ無気力につき,"Sono Mamimi Mukiryoku Nitsuki"
@@ -38,6 +40,7 @@ Actual Name,Romanized Name
 錯覚・Darling,"Sakkaku Darling"
 バッドガールの羽ばたき,Bad Girl no Habataki
 オフデーゲーム,Off the Game
+夏服にWIND YOU！,"Natsufuku ni WIND YOU!"
 想ひいろは,Souhi Iroha
 凛凛、凛世,"Rinrin, Rinze"
 微熱風鈴,Binetsu Fuurin
@@ -64,11 +67,13 @@ Actual Name,Romanized Name
 水×天カイヤナイト,"Suiten Kyanite"
 気になる！？染めちゃう！？,"Kininaru!? Somechau!?"
 てへっ♪,"Tehe"
+まわるものについて,"Mawarumono ni tsuite"
 ご褒美、いるよね♪,"Gohoubi, Iruyone"
 ほわっとスマイル,Howatto Smile
 ハ♡トフェルトゥギフト,Heartfelt Gift
 はじけてスマイル,Hajikete Smile
 深染め、いろみぐさ,"Fukashime, Iromigusa"
+ソラを跳ね,"Sora wo Hane"
 柔らかな微笑み,Yawarakana Hohoemi
 淡雪の戯れ,Awayuki no Tawamure
 伸ばす手に乗せるのは,Nobasute ni Noseruno wa
@@ -86,12 +91,16 @@ Actual Name,Romanized Name
 摩的・アンチテーゼ,Mateki Antithesis
 パープル・ミラージュ,Purple Mirage
 フィドル・ファドル,Fiddle Faddle
+真・TRAVELER,"Shin TRAVELER"
 紺碧のボーダーライン,Konpeki no Borderline
 1/60・NaturalHeart,"1-frame Natural Heart"
 幸福のリズム,Koufuku no Rhythm
 海と太陽のプロメッサ,"Umi to Taiyou no Promessa"
+乙女と交わすTrick,"Otome to Kawasu Trick"
 お試し／みつゴコロ,Otameshi Mitsugokoro
 それなら目をつぶりましょう,Sorenara Me wo Tsuburimashou
+く　ら　く　ら,"Ku ra ku ra"
+雨に祝福,"Ame ni Shukufuku"
 霧・音・燦・燦,Kiri Ne San San
 夕・音・鳴・鳴,Yuu Ne Mei Mei
 菜・菜・輪・舞,Nana Rinbu
@@ -107,16 +116,19 @@ Actual Name,Romanized Name
 とびっきりジンジャー,Tobikkiri Ginger
 曲がり角のランウェイ,Magarikado no Runway
 誰が為シンパシー,"Dare ga Tame Sympathy"
+秋陽のスケッチ,"Shuuyou no Sketch"
 杜野凛世の印象派,Morino Rinze no Inshousha
 凛世花伝,Rinze Kaden
 水色感情,Mizuiro Kanjou
 十二月短篇,Juunigatsu Tanpen
+われにかへれ,"Ware ni ka here"
 アルティメットマーメイド,Ultimate Mermaid
 メイドインナツハ,Made In Natsuha
 スタンバイオッケー,Standby OK
 ゆらゆらアクアリウム,Yurayura Aquarium
 ないしょのスイーツ,"Naisho no Sweets"
 お散歩サンライト,"Osanpo Sunlight"
+叶えて☆ゴールドフィッシュ,"Kanaete*Goldfish"
 事務所。静寂。大輪の華,"Jimusho. Shijima. Dairin no Hana"
 好きなものはなんですか？,"Sukinamono wa Nandesuka?"
 四夜一夜物語,"Yon'ya Ichiya Monogatari"
@@ -124,17 +136,25 @@ Actual Name,Romanized Name
 シークレット・ヒロイン,Secret Heroine
 サマーハニー・シーズン,"Summer Honey Season"
 はるかぜまち、1番地,"Harukazemachi, Ichibanchi"
+秋空と紅葉,"Akizora to Kouyou"
 ジャンプ！スタッグ！！！,"Jump! Stag!!!"
 空と青とアイツ,"Sora to Ao to Aitsu"
 オ♡フ♡レ♡コ,"Off the Record"
+アンシーン・ダブルキャスト,"Unseen Doublecast"
 ちょっとあげる～,"Chotto Ageru~"
 メイ・ビー,"Mei-be"
+シャッターチャンス！？,"Shutter Chance!?"
+"10個、光","10-ko, Kou"
+途方もない午後,"Tohou mo nai Gogo"
 カラカラカラ,"Karakarakara"
+ギンコ・ビローバ,"Ginkgo Biloba"
+ポシェットの中には,"Pochetto no Naka ni wa"
 アイドルのたまご,Idol no Tamago
 ２８３プロのヒナ,283Pro no Hina
 天然色ピクニック,Ten'nenshoku Picnic
 音、雨、パシャ、リ,"Oto, Ame, Pasha, RI"
 克服の特訓,Kokufuku no Tokkun
+まわる音色、君色のかおり,"Mawaru neiro, Kimiiro no Kaori"
 遊び疲れて……,Asobi Tsukarete...
 魔法の階段を上って……,Mahou no Kaidan wo Nobotte
 RPGのススメ,RPG no Susume
@@ -181,23 +201,32 @@ Best☆Great☆サマー！,"Best Great Summer!"
 ブルーミングハート,Blooming Heart
 こころに恋,Kokoro ni Koi
 腹が減っては遊びはできぬ,Hara ga Hette wa Asobi wa Dekinu
+花火の夜に……,Hanabi no Yoru ni...
 "(ノージャンル)グラヴィティ","(No Genre) Gravity"
 和泉流・書道心得,"Izumi-ryuu Shodou Kokoroe"
+＋『α』,"+ α"
+かっとばし党の逆襲,Kattobashi-tou no Gyakushuu
+閑話,"Kanwa"
+きせつはアイスクリン,Kisetsu wa Ice-cream
 トリプルイルミネーション,Triple Illumination
 お揃いスナップ,Osoroi Snap
 スプラッシュビート,Splash Beat
 はじまりのエピローグ,Hajimari no Epilogue
 冬街イルミネート,Fuyumachi Illuminate
 駅線上の日常,Ekisenjou no Nichijou
+つむぎ、まばゆく。星屑たち,"Tsumugi, Mabayuku. Hoshikuzutachi"
+こころ、えんにならんで,"Kokoro, En ni Narande"
 みんなと結んだもの,Minna to Musundamono
 風野署長の一日勤務回想録,Kazano Shochou no Ichinichi Kinmu Kaisouroku
 星掬い藍仰ぐ,"Hoshisukui Ai'aogu"
 宝石色のしおり,"Houseki'iro no Shiori"
 星合アステリズム,"Hoshiai Asterism"
+水面を仰いで海の底,"Suimen wo Aoide Umi no Soko"
 スタァライトショウタイム,"Starlight Showtime"
 キャプテン★パンプキン,Captain Pumpkin
 ああひかりよ,"Ah Hikari yo"
 花笑み咲匂う,"Hanaemi Sakiniou"
+アップ・トゥ・ユー,"Up to You"
 ふっふ～ん、ふふ～ん♪,"Fuffuun, Fufuun"
 これ、なんの話～？,"Kore, Nanno Hanashi~?"
 SIDE：K,"SIDE:K"
@@ -214,6 +243,7 @@ SIDE：K,"SIDE:K"
 月映えのソワレ,Tsukibae no Soiree
 等身大のレイニーデイ,Toushindai no Rainy Day
 prince×princess,"prince x princess"
+シー・イズ,"She is"
 "ハロー、私の「いつも通り」","Hello, Watashi no ""Itsumo Doori"""
 賑やか四畳半,"Nigiyaka Yojouhan"
 プレゼントなら両手いっぱい,Present nara Ryoute Ippai
@@ -223,9 +253,12 @@ prince×princess,"prince x princess"
 我・思・君・思,"Gashi Kunshi"
 潜・潜・夏・娘,"Senzen Kajou"
 奇・綺・甘・甘,"Kiki Ama'ama"
+数・数・娘・娘,"Kazukazu Nyannyan"
 ヒーローインザパーク,Hero in the Park
 鉄板★絶品★海の家,Teppan Zeppin Umi no Ie
 雨のち、マイヒーロー,"Ame no chi, My Hero"
+ナツイロ☆アフタースクール,"Natsuiro After School"
+続！（完全）燃焼,Zoku! (Kanzen) Nenshou
 放課後★肝試しパニック,Houkago Kimodameshi Panic
 桜餅マスター……？,Sakuramochi Master...?
 紅蘭偉魔空珠に挑め！,CLIMAX ni Idome!
@@ -233,6 +266,7 @@ prince×princess,"prince x princess"
 未知なるFROZEN,Michinaru FROZEN
 スリープオーバーベイビー,"Sleepover Baby"
 坂道だらけのこの街で,"Sakamichidarake no Kono Machi de"
+kimagure全力ビート！,"kimagure zenryoku beat!"
 ふれんど日和,Furendo Biyori
 凛世夕町物語,Rinze Yuumachi Monogatari
 常夏CLIMAX,"Tokonatsu CLIMAX"
@@ -251,16 +285,22 @@ prince×princess,"prince x princess"
 かしまし、みっつの願いごと,"Kashimashi, Mittsu no Negaigoto"
 トゥインクル・トゥインクル,"Twinkle Twinkle"
 見果てぬ先のアヴァロン,"Mihatenu Saki no Avalon"
+リトル・スターズ,"Little Stars"
 先生のお時間,Sensei no Ojikan
 永遠のCarol,Eien no Carol
 トキ・メキ・タコさん,Tokimeki Taco-san
 ウォーム・スノウ,"Warm Snow"
 あめ、ゆき、はれ,"Ame, Yuki, Hare"
 ドゥワッチャラブ！,"Do What You Love!"
+夏空への挑戦,"Natsuzora e no Chousen"
 プレゼン・バトン！,"Present Baton!"
 スパイシーベリィデコレイト,Spicy Berry Decorate
 今日の手は空を切らない,"Kyou no Te wa Sora wo Kiranai"
+ゴースト・サイド！,"Ghost Side!"
 ノー墨・勝者フェイス,No Sumi Shousha Phase
 ＠ストーリィズ,"@Stories"
 なるんじゃん？,Narunjyan?
 うち来る～！？,"Uchikuru~!?"
+ハウ・アー・UFO,"How are UFO"
+游魚,"Yuugyo"
+パーティーのやくそく,"Party no Yakusoku"
