BIG UPDATE YEAHHHH

--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -1,14 +1,13 @@
 Actual Name,Romanized Name
-白いツバサ,Shiroi Tsubasa
-アイドルロード,Idol Road
 ナチュラルモード,Natural Mode
-しじまに華ひととき,Shijimani Hana Hitotoki
 ぐうぜんBOOKS,Guuzen BOOKS
+しじまに華ひととき,Shijimani Hana Hitotoki
 花結びゆくゆく,Hanamusubi Yukuyuku
+一番星の魔法,Ichibanboshi no Mahou
 手作りの心遣い,Tedzukuri no Kokorodzukai
 マフラー直して、心は解けて,"Muffler Naoshite, Kokoro wa Tokete"
-落下予測地点,"Rakka Yosoku Chiten"
-インビジブルタイム,"Invisible Time"
+落下予測地点,Rakka Yosoku Chiten
+インビジブルタイム,Invisible Time
 キネマ・リリックで夢見て,Cinema Lyric de Yumemite
 小さな夜のトロイメライ,Chiisana Yoru no Träumerei
 チエルアルコは流星の,Chieralco wa Ryuusei no
@@ -19,11 +18,11 @@ Actual Name,Romanized Name
 猫道カントリー,Nekomachi Country
 裏腹あまのじゃく,Urahara Amanojaku
 夕つ方まみみチック,Yuutsugata Mamimi Tick
-そのまみみ無気力につき,"Sono Mamimi Mukiryoku Nitsuki"
+そのまみみ無気力につき,Sono Mamimi Mukiryoku Nitsuki
 秘めやかファンサービス,Himeyaka Fan Service
 ふれあい、おもいあい,"Fureai, Omoiai"
-雪染めロマンティカ,Yukisome Romantica
 真紅一輪,Shinku Ichirin
+雪染めロマンティカ,Yukisome Romantica
 カラフルメタモルフォーゼ,Colorful Metamorph
 雨色、上機嫌,"Amairo, Joukigen"
 お願い、ただの少女がいい,"Onegai, Tada no Shoujo ga Ii"
@@ -31,23 +30,26 @@ Actual Name,Romanized Name
 伝・伝・心・音,Den Den Shin On
 白・白・白・祈,Shiro Shiro Shiro Inori
 天・天・白・布,Ama Ama Hakufu
+雨・雨・電・電,U'u Denden
 マメ丸と一緒！,Mamemaru to Issho!
 デコって！ハッピークッキー,Dekotte! Happy Cookie
-キャッチ・ザ・フォール！,"Catch the Fowl!"
-窓辺・サイレントタイム,"Madobe Silent Time"
+キャッチ・ザ・フォール！,Catch the Fowl!
+窓辺・サイレントタイム,Madobe Silent Time
 純真チョコレート,Junshin Chocolate
 よろしく♡めしませっ,Yoroshiku Meshimase
-錯覚・Darling,"Sakkaku Darling"
+錯覚・Darling,Sakkaku Darling
 バッドガールの羽ばたき,Bad Girl no Habataki
 オフデーゲーム,Off the Game
-夏服にWIND YOU！,"Natsufuku ni WIND YOU!"
+夏服にWIND YOU！,Natsufuku ni WIND YOU!
 想ひいろは,Souhi Iroha
 凛凛、凛世,"Rinrin, Rinze"
 微熱風鈴,Binetsu Fuurin
 ふらここのうた,Furakoko no Uta
+階段式純情昇降機,Kaidanshiki Junjou Shoukouki
 ストイックトレーニング,Stoic Training
 カトレアの花言葉,Cattlea no Hanakotoba
 鳥籠をひらいて,Torikago wo Hiraite
+風がかけていくように,Kaze ga Kaketeikuyou ni
 似合うかな？,Niaukana?
 甜花ちゃんといっしょ☆,Tenka-chan to Issho
 ふたつの雨,Futatsu no Ame
@@ -56,158 +58,202 @@ Actual Name,Romanized Name
 シンメトリー・プールサイド,Symmetry Poolside
 氷上バンビーナ,Hyoujou Bambina
 お日様染めのマリーナ,Ohisama Some no Marina
-ストライク狙って,"Strike Neratte"
+ストライク狙って,Strike Neratte
 マイフェイバリット,My Favorite
 一夏一刻物語,Hitonatsu Ikkoku Monogatari
-よそゆき顔のセレナーデ,"Yosoyukigao no Serenade"
-ワン・モア・フラワリング,"One More Flowering"
-さかさま世界,"Sakasama Sekai"
-かしゃーんとがらがら,"Kashaan to Garagara"
-ザ・冬優子イズム,"The Fuyukoism"
-水×天カイヤナイト,"Suiten Kyanite"
-気になる！？染めちゃう！？,"Kininaru!? Somechau!?"
-てへっ♪,"Tehe"
-まわるものについて,"Mawarumono ni tsuite"
+よそゆき顔のセレナーデ,Yosoyukigao no Serenade
+ワン・モア・フラワリング,One More Flowering
+さかさま世界,Sakasama Sekai
+かしゃーんとがらがら,Kashaan to Garagara
+はり・はり,Hari Hari
+ザ・冬優子イズム,The Fuyukoism
+水×天カイヤナイト,Suiten Kyanite
+はるさき可憐花,Harusaki Karenbana
+気になる！？染めちゃう！？,Kininaru!? Somechau!?
+てへっ♪,Tehe
 ご褒美、いるよね♪,"Gohoubi, Iruyone"
+まわるものについて,Mawarumono ni tsuite
+おかえり、ギター,"Okaeri, Guitar"
+ダウト,Doubt
+はれのひ喫茶店,Hare no Hi Kissaten
+一億回めくらいの、その夏,"Ichiokukaime kurai no, Sono Natsu"
 ほわっとスマイル,Howatto Smile
 ハ♡トフェルトゥギフト,Heartfelt Gift
 はじけてスマイル,Hajikete Smile
 深染め、いろみぐさ,"Fukashime, Iromigusa"
-ソラを跳ね,"Sora wo Hane"
+ソラを跳ね,Sora wo Hane
+花風Smiley,Hanakaze Smiley
 柔らかな微笑み,Yawarakana Hohoemi
 淡雪の戯れ,Awayuki no Tawamure
 伸ばす手に乗せるのは,Nobasute ni Noseruno wa
 清閑に息をひそめて,Seikan ni Iki wo Hisomete
+黒百合前で待ち合わせ,Kuroyurimae de Machiawase
+涼,Ryou
 金色の元気いっぱいガール,Kin'iro no Genki Ippai Girl
 夏に恋するピチカート！,Natsu ni Koisuru Pizzikato!
 シュカのまにまに,Ska no Manimani
-日々を紡ぐインヴェルノ,"Hibi wo Tsumugu Inferno"
-アイの誓い,"Ai no Chikai"
+日々を紡ぐインヴェルノ,Hibi wo Tsumugu Inferno
+アイの誓い,Ai no Chikai
+たまゆらフレーミング,Tamayura Flaming
 ばりうまかブルース,Bariumaka Blues
 月の浜辺で待っとって,Tsuki no Hamabe de Mattotte
 風吹く丘にはよ来んね,Kaze Fukuoka ni Hayo Kunne
 うちのリボンは恋結び,Uchi no Ribbon wa Komusubi
+心の鐘が鳴っとるけん,Kokoro no Kane ga Nattoruken
 トリッキーナイト,Tricky Night
 摩的・アンチテーゼ,Mateki Antithesis
 パープル・ミラージュ,Purple Mirage
 フィドル・ファドル,Fiddle Faddle
-真・TRAVELER,"Shin TRAVELER"
+真・TRAVELER,Shin TRAVELER
+アバウト-ナイト-ライト,About-Night-Light
 紺碧のボーダーライン,Konpeki no Borderline
-1/60・NaturalHeart,"1-frame Natural Heart"
+1/60・NaturalHeart,1-frame Natural Heart
 幸福のリズム,Koufuku no Rhythm
-海と太陽のプロメッサ,"Umi to Taiyou no Promessa"
-乙女と交わすTrick,"Otome to Kawasu Trick"
+海と太陽のプロメッサ,Umi to Taiyou no Promessa
+乙女と交わすTrick,Otome to Kawasu Trick
 お試し／みつゴコロ,Otameshi Mitsugokoro
 それなら目をつぶりましょう,Sorenara Me wo Tsuburimashou
-く　ら　く　ら,"Ku ra ku ra"
-雨に祝福,"Ame ni Shukufuku"
+く　ら　く　ら,Ku ra ku ra
+雨に祝福,Ame ni Shukufuku
+♡コメディ,LOVE COMEDY
 霧・音・燦・燦,Kiri Ne San San
 夕・音・鳴・鳴,Yuu Ne Mei Mei
 菜・菜・輪・舞,Nana Rinbu
 鱗・鱗・謹・賀,Rinrin Kin'ga
+琴・禽・空・華,Kinkin Kuuge
 第２形態アーマードタイプ,Dai 2 Keitai Armor Drive
 新装備・バブルバスター！,Shinshoubi Bubble Buster!
 潮騒のシーショア,Shiosai no Seashore
 エクストリーム・ブレイク！,Extreme Break!
+日刊ウィズ・ユー！,Nikkan With You!
 ちょこ色×きらきらロマン,Chocoiro Kirakira Romance
 あそ→と♡ちよこれいと,Assort Chiyocolate
 かきまぜたら＊ミルク,Kakimazetara Milk
+プリティ・スイート,Pretty Sweet
 ラムネ色の覚悟,Ramuneiro no Kakugo
 とびっきりジンジャー,Tobikkiri Ginger
 曲がり角のランウェイ,Magarikado no Runway
-誰が為シンパシー,"Dare ga Tame Sympathy"
-秋陽のスケッチ,"Shuuyou no Sketch"
+誰が為シンパシー,Dare ga Tame Sympathy
+秋陽のスケッチ,Shuuyou no Sketch
+I・OWE・U,I OWE U
 杜野凛世の印象派,Morino Rinze no Inshousha
 凛世花伝,Rinze Kaden
 水色感情,Mizuiro Kanjou
 十二月短篇,Juunigatsu Tanpen
-われにかへれ,"Ware ni ka here"
+われにかへれ,Ware ni ka here
+ロー・ポジション,Low Position
 アルティメットマーメイド,Ultimate Mermaid
 メイドインナツハ,Made In Natsuha
+夏は来ぬ,Natsu wa Kinu
 スタンバイオッケー,Standby OK
 ゆらゆらアクアリウム,Yurayura Aquarium
-ないしょのスイーツ,"Naisho no Sweets"
-お散歩サンライト,"Osanpo Sunlight"
-叶えて☆ゴールドフィッシュ,"Kanaete*Goldfish"
-事務所。静寂。大輪の華,"Jimusho. Shijima. Dairin no Hana"
-好きなものはなんですか？,"Sukinamono wa Nandesuka?"
-四夜一夜物語,"Yon'ya Ichiya Monogatari"
+ないしょのスイーツ,Naisho no Sweets
+お散歩サンライト,Osanpo Sunlight
+叶えて☆ゴールドフィッシュ,Kanaete*Goldfish
+約束ペタル,Yakusoku Pedal
+事務所。静寂。大輪の華,Jimusho. Shijima. Dairin no Hana
+好きなものはなんですか？,Sukinamono wa Nandesuka?
+四夜一夜物語,Yon'ya Ichiya Monogatari
+BON・BON・DAY！,BON BON DAY!
+バス・タイムの気分で,Bus Time no Kibun de
 マイ・ピュア・ロマンス,My Pure Romance
 シークレット・ヒロイン,Secret Heroine
-サマーハニー・シーズン,"Summer Honey Season"
+サマーハニー・シーズン,Summer Honey Season
 はるかぜまち、1番地,"Harukazemachi, Ichibanchi"
-秋空と紅葉,"Akizora to Kouyou"
-ジャンプ！スタッグ！！！,"Jump! Stag!!!"
-空と青とアイツ,"Sora to Ao to Aitsu"
-オ♡フ♡レ♡コ,"Off the Record"
-アンシーン・ダブルキャスト,"Unseen Doublecast"
-ちょっとあげる～,"Chotto Ageru~"
-メイ・ビー,"Mei-be"
-シャッターチャンス！？,"Shutter Chance!?"
-"10個、光","10-ko, Kou"
-途方もない午後,"Tohou mo nai Gogo"
-カラカラカラ,"Karakarakara"
-ギンコ・ビローバ,"Ginkgo Biloba"
-ポシェットの中には,"Pochetto no Naka ni wa"
+秋空と紅葉,Akizora to Kouyou
+ハッピー・アイ・スクリーム,Happy I Scream
+ジャンプ！スタッグ！！！,Jump! Stag!!!
+空と青とアイツ,Sora to Ao to Aitsu
+不機嫌なテーマパーク,Fukigenna Theme Park
+オ♡フ♡レ♡コ,Off the Record
+アンシーン・ダブルキャスト,Unseen Doublecast
+ONSTAGE？,ONSTAGE?
+ちょっとあげる～,Chotto Ageru~
+メイ・ビー,Mei-be
+シャッターチャンス！？,Shutter Chance!?
+今のうちは走らない,Ima no Uchi wa Hashiranai
+10個、光,"10-ko, Kou"
+途方もない午後,Tohou mo nai Gogo
+つづく、,"Tsudzuku,"
+カラカラカラ,Karakarakara
+ギンコ・ビローバ,Ginkgo Biloba
+ピトス・エルピス,Pithos Elpis
+ポシェットの中には,Pochetto no Naka ni wa
+おみくじ結びますか,Omikuji Musubimasuka
+♡まっクろはムウサぎ♡,Makkuro Hamu Usagi
+ヴぇりべりいかシたサマー,Very Very Ikashita Summer
+白いツバサ,Shiroi Tsubasa
+アイドルロード,Idol Road
 アイドルのたまご,Idol no Tamago
 ２８３プロのヒナ,283Pro no Hina
 天然色ピクニック,Ten'nenshoku Picnic
 音、雨、パシャ、リ,"Oto, Ame, Pasha, RI"
-克服の特訓,Kokufuku no Tokkun
 まわる音色、君色のかおり,"Mawaru neiro, Kimiiro no Kaori"
+克服の特訓,Kokufuku no Tokkun
 遊び疲れて……,Asobi Tsukarete...
 魔法の階段を上って……,Mahou no Kaidan wo Nobotte
 RPGのススメ,RPG no Susume
-クローズ・トゥ・ユー,"Close to You"
+クローズ・トゥ・ユー,Close to You
+幾星霜の先に,Ikuseisou no Saki ni
 友情の花吹雪,Yuujou no Hanafubuki
 友達という灯り,Tomodachi to iu Akari
-アイムカミングスーン,"I'm Coming Soon"
-サンシャインシエスタ！,"Sunshine Siesta!"
+アイムカミングスーン,I'm Coming Soon
+サンシャインシエスタ！,Sunshine Siesta!
 やけん、なんの話～！？,"Yaken, Nanno Hanashi~!?"
 と～りゃんせ！,Tooryanse!
 秋、どがんね～？,"Aki, Doganne~?"
 冬、どがんね～？,"Fuyu, Doganne~?"
 カラフルポップMIX,Colorful Pop MIX
-アーリー・ナチュラリィ,"Early Naturally"
+アーリー・ナチュラリィ,Early Naturally
+イン・ザ・ピンク,In the Pink
 雲間のモーメント,Kumoma no Moment
 マジカル＊スカイレース,Magical Skyrace
-咲耶と摩美々のぶらり旅,"Sakuya to Mamimi no Buraritabi"
+咲耶と摩美々のぶらり旅,Sakuya to Mamimi no Buraritabi
 輪になって,Wa ni Natte
 メロウビート・スローダウン,Mellowbeat Slowdown
-SIDE：Y,"SIDE:Y"
+SIDE：Y,SIDE:Y
 綿毛ノ想,Watage no Sou
 娘・娘・金・魚,Jou Jou Kin Gyo
+我・思・君・思,Gashi Kunshi
 君・空・我・空,Kimi Sora Waga Sora
 放課後スノーガールズ！,Houkago Snow Girls!
 無敵の証！五紋章！,Muteki no Akashi! Gomonshou!
-ホーカゴ・ア・ゴーゴー！,"Houkago-A-Gogo"
+ホーカゴ・ア・ゴーゴー！,Houkago-A-Gogo
+キング・アンド・ヒーロー,King and Hero
 迷走チョコロード,Meisou Chocoroad
-Best☆Great☆サマー！,"Best Great Summer!"
-ぐるもこ・まふ×２,"Gurumoko Mafumafu"
+茜色セレンディピティ,Akaneiro Serendipity
+Best☆Great☆サマー！,Best Great Summer!
+ぐるもこ・まふ×２,Gurumoko Mafumafu
 意地っ張りサンセット,Ijippari Sunset
 ３名様極楽旅行記,Sanmeisama Gokuraku Ryokouki
 グッド・ラック・ボール,Good Luck Ball
+晴れ待ちのひと時,Haremachi no Hito Toki
 百色ふぉとぐらふ,Hyakuiro Photograph
-をとめ大学,"Otome Daigaku"
-をとめ辞典,"Otome Jiten"
+をとめ大学,Otome Daigaku
+をとめ辞典,Otome Jiten
 虹待ちレインドロップ,Nijimachi Raindrop
 紅いろは、白,"Beni Iroha, Shiro"
-スタンド・バイ,"Stand by"
-夢追いランナバウト,"Yumeoi Runabout"
+スタンド・バイ,Stand by
+夢追いランナバウト,Yumeoi Runabout
 秘密のがんばり,Himitsu no Ganbari
 光の想い出,Hikari no Omoida
 冬の日の『贈り物』,"Fuyu no Hi no ""Okurimono"""
 アイ・セーブ・ユー,I Save You
+楽園に背く,Gakuen ni Somuku
 ブルーミングハート,Blooming Heart
 こころに恋,Kokoro ni Koi
+好き、っていうのはね,"Suki, tte Iu no Hane"
 腹が減っては遊びはできぬ,Hara ga Hette wa Asobi wa Dekinu
 花火の夜に……,Hanabi no Yoru ni...
-"(ノージャンル)グラヴィティ","(No Genre) Gravity"
-和泉流・書道心得,"Izumi-ryuu Shodou Kokoroe"
-＋『α』,"+ α"
+頬を照らすのは,Hoo wo Terasu no wa
+(ノージャンル)グラヴィティ,(No Genre) Gravity
+和泉流・書道心得,Izumi-ryuu Shodou Kokoroe
+＋『α』,+ α
+イケてた！？,Iketeta!?
 かっとばし党の逆襲,Kattobashi-tou no Gyakushuu
-閑話,"Kanwa"
+閑話,Kanwa
 きせつはアイスクリン,Kisetsu wa Ice-cream
+しかえし優等生,Shikaeshi Yuutousei
 トリプルイルミネーション,Triple Illumination
 お揃いスナップ,Osoroi Snap
 スプラッシュビート,Splash Beat
@@ -216,91 +262,116 @@ Best☆Great☆サマー！,"Best Great Summer!"
 駅線上の日常,Ekisenjou no Nichijou
 つむぎ、まばゆく。星屑たち,"Tsumugi, Mabayuku. Hoshikuzutachi"
 こころ、えんにならんで,"Kokoro, En ni Narande"
+泡沫の石たちに乾杯,Utakata no Ishitachi ni Kanpai
+夏風渡るdiary,Natsukaze Wataru Diary
 みんなと結んだもの,Minna to Musundamono
 風野署長の一日勤務回想録,Kazano Shochou no Ichinichi Kinmu Kaisouroku
-星掬い藍仰ぐ,"Hoshisukui Ai'aogu"
-宝石色のしおり,"Houseki'iro no Shiori"
-星合アステリズム,"Hoshiai Asterism"
-水面を仰いで海の底,"Suimen wo Aoide Umi no Soko"
-スタァライトショウタイム,"Starlight Showtime"
+星合アステリズム,Hoshiai Asterism
+星掬い藍仰ぐ,Hoshisukui Ai'aogu
+宝石色のしおり,Houseki'iro no Shiori
+水面を仰いで海の底,Suimen wo Aoide Umi no Soko
+スタァライトショウタイム,Starlight Showtime
 キャプテン★パンプキン,Captain Pumpkin
-ああひかりよ,"Ah Hikari yo"
-花笑み咲匂う,"Hanaemi Sakiniou"
-アップ・トゥ・ユー,"Up to You"
+花笑み咲匂う,Hanaemi Sakiniou
+ああひかりよ,Ah Hikari yo
+アップ・トゥ・ユー,Up to You
+ハッピー・バレンタイン？,Happy Valentine?
 ふっふ～ん、ふふ～ん♪,"Fuffuun, Fufuun"
 これ、なんの話～？,"Kore, Nanno Hanashi~?"
-SIDE：K,"SIDE:K"
+SIDE：K,SIDE:K
 夏、どがんね～？,"Natsu, Doganne~?"
 晴れ、よかばい～！,"Hare, Yokabai~!"
+会いに行かんば～！,Ai ni Ikanba~!
+ビコーズ・ラブ,Because Love
 ゴシックデコレーション,Gothic Decoration
 闇鍋上等,Yaminabe Joutou
 夜夜中ワンダーラスト,Yoruyonaka Wanderlust
 きまぐれのめぐみ,Kimagure no Megumi
 デタラメハッシュタグ,Detarame Hashtag
-スプリング・フィッシュ,"Spring Fish"
+スプリング・フィッシュ,Spring Fish
+ソバニアル・サマー,Soba ni Aru Summer
 指先の煌めき,Yubisaki no Kirameki
 街角フラワーガーデン,Machikado Flower Garden
 月映えのソワレ,Tsukibae no Soiree
+prince×princess,prince x princess
+シー・イズ,She is
+あのねが言える場所,Anone ga Ieru Basho
+それは途中の１ページ,Sore wa Tochuu no 1 Page
 等身大のレイニーデイ,Toushindai no Rainy Day
-prince×princess,"prince x princess"
-シー・イズ,"She is"
-"ハロー、私の「いつも通り」","Hello, Watashi no ""Itsumo Doori"""
-賑やか四畳半,"Nigiyaka Yojouhan"
+ハロー、私の「いつも通り」,"Hello, Watashi no ""Itsumo Doori"""
+賑やか四畳半,Nigiyaka Yojouhan
 プレゼントなら両手いっぱい,Present nara Ryoute Ippai
-おはようと日向に手を振る,"Ohayou to Hinata ni Te wo Furu"
+おはようと日向に手を振る,Ohayou to Hinata ni Te wo Furu
+リ・リフレクション,Re-Reflection
 霧・霧・奇・譚,Kiri Kiri Ki Tan
-娘・娘・謹・賀,"Joujou Kinga"
-我・思・君・思,"Gashi Kunshi"
-潜・潜・夏・娘,"Senzen Kajou"
-奇・綺・甘・甘,"Kiki Ama'ama"
-数・数・娘・娘,"Kazukazu Nyannyan"
+娘・娘・謹・賀,Joujou Kinga
+潜・潜・夏・娘,Senzen Kajou
+奇・綺・甘・甘,Kiki Ama'ama
+数・数・娘・娘,Kazukazu Nyannyan
 ヒーローインザパーク,Hero in the Park
 鉄板★絶品★海の家,Teppan Zeppin Umi no Ie
 雨のち、マイヒーロー,"Ame no chi, My Hero"
-ナツイロ☆アフタースクール,"Natsuiro After School"
+ナツイロ☆アフタースクール,Natsuiro After School
 続！（完全）燃焼,Zoku! (Kanzen) Nenshou
+反撃の狼煙をあげよ！,Hangeki no Noroshi wo Ageyo!
 放課後★肝試しパニック,Houkago Kimodameshi Panic
 桜餅マスター……？,Sakuramochi Master...?
 紅蘭偉魔空珠に挑め！,CLIMAX ni Idome!
-おあがり←くらいまっくす,"O'Agari Climax"
+おあがり←くらいまっくす,O'Agari Climax
+kimagure全力ビート！,kimagure zenryoku beat!
+code:SH☆☆TING star!,code:SHOOTING star!
 未知なるFROZEN,Michinaru FROZEN
-スリープオーバーベイビー,"Sleepover Baby"
-坂道だらけのこの街で,"Sakamichidarake no Kono Machi de"
-kimagure全力ビート！,"kimagure zenryoku beat!"
+スリープオーバーベイビー,Sleepover Baby
+坂道だらけのこの街で,Sakamichidarake no Kono Machi de
+SPACE WHAT？,SPACE WHAT?
+モーニング・グロウリー？,Morning Glory?
 ふれんど日和,Furendo Biyori
 凛世夕町物語,Rinze Yuumachi Monogatari
-常夏CLIMAX,"Tokonatsu CLIMAX"
-夜明けの晩に,"Yoake no Ban ni"
+常夏CLIMAX,Tokonatsu CLIMAX
+夜明けの晩に,Yoake no Ban ni
+日を食んで、夜を啜って,"Nichi wo Kunde, Yoru wo Susutte"
+祝唄-hogiuta-,hogiuta
 熱血指導！,Nekketsu Shidou!
 遊びも本気で,Asobi mo Honki de
 #ナッツ・チョコジェリー,#Nuts Choco Jelly
 月刊CLIMAX,GEKKAN CLIMAX
+ビードロの翳,Vidro Kage
 幸せのりんご飴,Shiawase no Ringo Ame
 まだ……寝ないから……,Mada... Nenai kara....
 お菓子なティータイム,Okashina Teatime
-ハッピーの答えはどこに？,"Happy no Kotae wa Doko ni?"
-楽園に背く,Gakuen ni Somuku
+ハッピーの答えはどこに？,Happy no Kotae wa Doko ni?
+スペンサー家の日常,Spencer-ka no Nichijou
+レッツ☆忍び足！,Lets Shinobi Ashi!
 彩りファッションドール,Irodori Fashion Doll
 身支度はお任せ☆,Mijitaku wa Omakase
 かしまし、みっつの願いごと,"Kashimashi, Mittsu no Negaigoto"
-トゥインクル・トゥインクル,"Twinkle Twinkle"
-見果てぬ先のアヴァロン,"Mihatenu Saki no Avalon"
-リトル・スターズ,"Little Stars"
+トゥインクル・トゥインクル,Twinkle Twinkle
+見果てぬ先のアヴァロン,Mihatenu Saki no Avalon
+リトル・スターズ,Little Stars
 先生のお時間,Sensei no Ojikan
 永遠のCarol,Eien no Carol
 トキ・メキ・タコさん,Tokimeki Taco-san
-ウォーム・スノウ,"Warm Snow"
+ウォーム・スノウ,Warm Snow
+ドゥワッチャラブ！,Do What You Love!
+夏空への挑戦,Natsuzora e no Chousen
+プレゼン・バトン！,Present Baton!
 あめ、ゆき、はれ,"Ame, Yuki, Hare"
-ドゥワッチャラブ！,"Do What You Love!"
-夏空への挑戦,"Natsuzora e no Chousen"
-プレゼン・バトン！,"Present Baton!"
+今日の手は空を切らない,Kyou no Te wa Sora wo Kiranai
+ゴースト・サイド！,Ghost Side!
+秋の実りの配達係,Minori no Haitatsugakari
 スパイシーベリィデコレイト,Spicy Berry Decorate
-今日の手は空を切らない,"Kyou no Te wa Sora wo Kiranai"
-ゴースト・サイド！,"Ghost Side!"
 ノー墨・勝者フェイス,No Sumi Shousha Phase
-＠ストーリィズ,"@Stories"
+＠ストーリィズ,@Stories
+×トリック／〇＿＿＿＿,X Trick/O _____
 なるんじゃん？,Narunjyan?
-うち来る～！？,"Uchikuru~!?"
-ハウ・アー・UFO,"How are UFO"
-游魚,"Yuugyo"
-パーティーのやくそく,"Party no Yakusoku"
+うち来る～！？,Uchikuru~!?
+エンジョイ！パーティ,Enjoy! Party
+いるっしょ！,Irussho!
+よしよし♪,Yoshiyoshi
+ハウ・アー・UFO,How are UFO
+がんばれ！ ノロマ号,Ganbare! Noroma-gou
+游魚,Yuugyo
+雨情,Usei
+パーティーのやくそく,Party no Yakusoku
+思い出にもならない,Omoide ni Monaranai
+傍白のあいだ,Bouhaku no Aida
