add P-card TL until 2023.5.22

--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -63,6 +63,7 @@ Actual Name,Romanized Name
 一夏一刻物語,Hitonatsu Ikkoku Monogatari
 よそゆき顔のセレナーデ,Yosoyukigao no Serenade
 ワン・モア・フラワリング,One More Flowering
+夏、イエー,"Natsu, Yay!"
 さかさま世界,Sakasama Sekai
 かしゃーんとがらがら,Kashaan to Garagara
 はり・はり,Hari Hari
@@ -111,6 +112,7 @@ Actual Name,Romanized Name
 幸福のリズム,Koufuku no Rhythm
 海と太陽のプロメッサ,Umi to Taiyou no Promessa
 乙女と交わすTrick,Otome to Kawasu Trick
+渦と淵,Uzu to Fuchi
 お試し／みつゴコロ,Otameshi Mitsugokoro
 それなら目をつぶりましょう,Sorenara Me wo Tsuburimashou
 く　ら　く　ら,Ku ra ku ra
@@ -130,6 +132,7 @@ Actual Name,Romanized Name
 あそ→と♡ちよこれいと,Assort Chiyocolate
 かきまぜたら＊ミルク,Kakimazetara Milk
 プリティ・スイート,Pretty Sweet
+砂糖づけ・ビターエンド,Satoudzuke Bitter End
 ラムネ色の覚悟,Ramuneiro no Kakugo
 とびっきりジンジャー,Tobikkiri Ginger
 曲がり角のランウェイ,Magarikado no Runway
@@ -247,6 +250,7 @@ Best☆Great☆サマー！,Best Great Summer!
 花火の夜に……,Hanabi no Yoru ni...
 頬を照らすのは,Hoo wo Terasu no wa
 (ノージャンル)グラヴィティ,(No Genre) Gravity
+馴染まないで非日常,Najimanaide Hinichijou
 和泉流・書道心得,Izumi-ryuu Shodou Kokoroe
 ＋『α』,+ α
 イケてた！？,Iketeta!?
@@ -375,3 +379,77 @@ SPACE WHAT？,SPACE WHAT?
 パーティーのやくそく,Party no Yakusoku
 思い出にもならない,Omoide ni Monaranai
 傍白のあいだ,Bouhaku no Aida
+間違いそうだ,Machigai Souda
+永遠の方程式,Eien no Houteishiki
+死神リポート,Shinigami Report
+をとめ条約,Otome Jouyaku
+黄葉の冠,Kouyou no Kanmuri
+秋空ばくちずさんで,Akizora Bakuchizusande
+フルスロットルエイジ！,Full Throttle H!
+スローリー・メモリー,Slowly Memory
+牛的情感盛り、一丁,"Ushiteki Joukanzakari, Icchou"
+黄昏時に会いましょう,Tasogaredoki ni Aimashou
+ピックアップ・スプリング,Pickup Spring
+足りない隙間,Tarinai Sukima
+セツナ/n,Setsuna/n
+雪、えとせとら,"Yuki, Etcetera"
+ソー・ディフィカルト！,"So difficult!"
+フロイラインに心酔,Fräulein ni Shinsui
+春告窓,Shunkokusou
+竜宮城へご招待☆,Ryuuguujou e Goshoutai*
+ちぐはぐ姫,Chiguhagu Hime
+アンコンシャス35→80,Unconscious 35->80
+見つかっちゃった♪,"Mitsukacchatta"
+聞こえててよ、babe,"Kikoeteteyo, babe"
+カラメル,Caramel
+福はうち,Fuku wa Uchi
+泣けよ洗濯機,"Nakeyo Sentakuki"
+ひとつ、はたたく,"Hitotsu, Hatataku"
+きみと巡り行く,"Kimi to Meguriyuku"
+洸,"Kou"
+ひとりじゃない夜のこと,Hitorijanai Yoru no Koto
+耿耿,"Koukou"
+エバー・リメンバー・ネバー,"Ever Remember Never"
+きゅん♡コメ,"Kyun Kome"
+たそかれスワッグ,"Tasokare Swag"
+ずっと・グッド・ラック,Zutto Good Luck
+あなたと、月の満ちる頃,"Anata to, Tsuki no Michiru Koro"
+よか匂いのする陽気やけん,"Yoka Nioi no Suru Youki Yaken"
+リバーシブル・トースト,"Reversible Toast"
+はらりひらり結ぶ,Harari Hirari Musubu
+私をときめかせて,Watashi wo Tokimekasete
+ノー・ライフ,No Life
+かぜかんむりのこどもたち,Kazekanmuri no Kodomotachi
+縷・縷・屡・来,Ruru Rurai
+ギア・アップ！ゴー・オン！,"Gear Up! Go On!"
+スノードーム・シンドローム,Snowdome Syndrome
+トコハレ☀コメディ,Tokohare Comedy
+うつくしいあした,Utsukushii Ashita
+チョコ for Y♡U,Choco for YOU
+花染む街で、君と,"Hanashimu Machi de, Kimi to"
+陽の光、透かせば,"Hi no Hikari, Sukaseba"
+さよならごつこ,Sayonaragokko
+晩秋ろまんす,Banshuu Romance
+花は,Hana wa
+マイバレンタイン,My Valentine
+雪空セパレート,Yukizora Separate
+聞いてマイハート,Kiite My Heart
+甜ing Room,Ten'ing Room
+つよがりのためのララバイ,Tsuyogari no Tame no Lullaby
+ひとひらで紡ぐ世界,Hitohira de Tsumugu Sekai
+光は光へ,Hikari wa Hikari e
+幕間、沸々と高温,"Maku'ai, Futsufutsu to Kou'on"
+名モナキ夜ノ標ニ,"Mei mo naki Yoru no Hyou ni"
+ちょー早い！,Chou Hayai!
+あたし流・かっこいい,Atashi-ryuu Kakkoii
+うちと幸せ,Uchi to Shiawase
+国道沿いに、憶光年,"Kuni Michizoi ni, Okukou-nen"
+夜はなにいろ,Yoru wa Nani Iro
+オイサラバエル,Oisarabaeru
+バグ・ル,Baguru
+てのひらの答え,Tenohira no Kotae
+なつやすみ学校,Natsuyasumi Gakkou
+セピア色の孤独,Sepia-iro no Kodoku
+TRICK☆☆☆,TRICK
+夜よこノ窓は塗らないデ,Yoruyoko no Mado wa Nuranaide
+↓ろウTea,"Sagerou Tea"
