add S-card TL until 2023.5.22

--- a/translations/card_transliteration.csv
+++ b/translations/card_transliteration.csv
@@ -453,3 +453,77 @@ SPACE WHAT？,SPACE WHAT?
 TRICK☆☆☆,TRICK
 夜よこノ窓は塗らないデ,Yoruyoko no Mado wa Nuranaide
 ↓ろウTea,"Sagerou Tea"
+空は澄み、今を越えて。,"Sora wa Sumi, Ima wo Koeru"
+ふわり気持ち、秋かおり,"Fuwari Kimochi, Aki Kaori"
+ばら色ハーモニー,"Bara-iro Harmony"
+episode：Cool,"episode:Cool"
+当日じゃない日,Toujitsujanai Hi
+翻弄by♡time,Honrou by time
+犬・猿・雉・霧,"Ken'en Chimu"
+ゆらりゆられて,Yurari Yurarete
+別冊をとめ,Bessatsu Otome
+ナチュラルデイズ,Natural Days
+アオハルランナーズ,Aoharu Runners
+初風Nostalgia,Hatsukaze Nostalgia
+殴打、その他の夢について,"Ouda, Sono Hoka no Yume Nitsuite"
+ダ・カラ,Dakara
+学割キャンペーン,Gakuwari Campaign
+夏葬灯,Natsu Soutou
+羽なしたちの長い日,Hane Nashi Tachi no Nagai Nichi
+春日影、さんならび,"Shunjitsu Kage, Sannarabi"
+私のレンズの先のこと,Watashi no Lens no Saki no Koto
+ふたりといる夜のこと,Futari to Iru Yoru no Koto
+ワン・デイ,One Day
+オールウェイズ,Always
+シェア・シェア・ハピネス,Share Share Happiness
+青風、駆けていく,"Aokaze, Nuketeiku"
+あけまして、大吉～！,"Akemashite, Daikichi~!"
+にゃんにゃんにゃ～ん♡,"Nyan Nyan Nyaan"
+かわいいひと,"Kawaii Hito"
+冬の隙間,Fuyu no Sukima
+純粋・fall into a trap,junsui fall into a trap
+ヒトトキ／トワ,Hitotoki / Towa
+心に住む人,Kokoro ni Susumu Hito
+午・燦・娘・娘,Gosan Nyan Nyan
+奏・奏・綺・羅,Sou Sou Ki Ra
+吼・吼・熱・々,Kou Kou Netsu Netsu
+煌・煌・星・娘,Kou Kou Sei Jou
+チルドレンモード！,Children Mode!
+ロング・ショート・タイム！,Long Short Time!
+グロウン・メイク・アップ！,Grown Make Up!
+オルター！,Alter!
+生彩トラベリング,Seisai Traveling
+◎もちもちよこ◎,Mochimo Chiyoko
+日々の灯り,Hibi no Akari
+はずむ息、夜を縫って,"Hazumu-Iki, Yoru wo Nutte"
+珈琲の牛乳いれたん,"Coffee no Gyuunyuu Iretan"
+明日の思い出で笑って,Ashita no Omoide de Waratte
+ベリー・ストロベリー,Very Strawberry
+Cool＆Warm,Cool&Warm
+デビルたちの夜会☆,Devil-tachi no Yokai
+走るっ！！！！,Hashiru!!!!
+キュン！とwith us,Kyun! to with us
+エンドレス・ゲーム,Endless Game
+満開、うまストロメリア,"Mankai, Umastromeria"
+そらカラフル、幾千の,"Sora Colorful, Ikusen no"
+一瞬を閉じ込め、あなたに,"Isshun wo Tojikome, Anata ni"
+とても、とても静かな雨,"Totemo, Totemo Shizukana Ame"
+ひかりしめすは,Hikari Shimesu wa
+Wrong？,Wrong?
+二律背反sweet,Niritsu Haihan sweet
+＜IF＞,"<IF>"
+左選んで～！,Hidari Erande~!
+本気！餅つき！,Honki! Mochitsuki!
+なんでもない～,Nandemonai~
+チョコレー党、起立！,"Chocola-tou, Kitou!"
+かっとばし党の長い夏,"Kattobashitou no Nagai Natsu"
+裏声であいつら,"Uragoe de Aitsura"
+射陽,Shayou
+洒落,Share
+ハシルウマ,Hashiru Uma
+はるとあめ,Haru to Ame
+きっと色褪せるけど,Kitto Iro'aseru kedo
+浪漫キャメラ0号,"Rouman Camera 0-gou"
+あっかい,Akkai
+こんなのホラーでしょ最悪,Konna no Horror desho Saiaku
+短二度、一番線,"Tan-futatabi, Ichibansen"
